# s32k1-pacs

./: LICENSE  README.md  update-pacs.sh
s32k144-pac/: Cargo.toml  device.x  generate.sh  memory.x
s32k144-pac/src/: aips.rs  cse_pram.rs  ftm0.rs  lib.rs  lpuart1.rs  mcm.rs  pcc.rs
s32k144-pac/src/adc0/: clp2.rs  g.rs  sc3.rs
s32k144-pac/src/adc1/: clp1_ofs.rs  clpx.rs  usr_ofs.rs  xofs.rs
s32k144-pac/src/aips/: mpra.rs  opacre.rs
s32k144-pac/src/can0/: ramn11.rs  ramn115.rs  ramn118.rs  ramn18.rs  ramn19.rs  ramn27.rs  ramn30.rs  ramn32.rs  ramn33.rs  ramn4.rs  ramn67.rs  ramn69.rs  ramn78.rs  ramn79.rs  ramn81.rs  ramn9.rs  ramn98.rs  rx14mask.rs  rximr13.rs  rximr18.rs  rximr19.rs  rximr2.rs  rximr24.rs  rximr26.rs
s32k144-pac/src/can1/: ctrl2_pn.rs  pl2_plmask_lo.rs  ramn39.rs  ramn40.rs  ramn45.rs  rximr4.rs  rximr5.rs  timer.rs
s32k144-pac/src/can2/: ctrl1_pn.rs  esr2.rs  flt_id1.rs  pl2_plmask_hi.rs  ramn17.rs  ramn20.rs  ramn21.rs  ramn28.rs  ramn37.rs  ramn38.rs  ramn61.rs  rximr10.rs  wmb0_d47.rs  wmb2_cs.rs
s32k144-pac/src/crc/: crc_data.rs  crc_datal.rs  datalu.rs
s32k144-pac/src/cse_pram/: _embedded_ram12lu.rs  _embedded_ram16lu.rs  _embedded_ram20hl.rs  _embedded_ram23lu.rs  _embedded_ram24hu.rs  _embedded_ram24lu.rs  _embedded_ram26lu.rs  _embedded_ram27hl.rs  _embedded_ram27hu.rs  _embedded_ram28hu.rs  _embedded_ram29hu.rs  cse_pram__embedded_ram10.rs  cse_pram__embedded_ram13ll.rs  cse_pram__embedded_ram1ll.rs  cse_pram__embedded_ram22.rs  cse_pram__embedded_ram22ll.rs  cse_pram__embedded_ram24.rs  cse_pram__embedded_ram27.rs  cse_pram__embedded_ram28ll.rs  cse_pram__embedded_ram2ll.rs  cse_pram__embedded_ram30.rs  cse_pram__embedded_ram31.rs  cse_pram__embedded_ram31ll.rs  (+3 more)
s32k144w-pac/: Cargo.toml  S32K144W.svd  generate.sh
s32k144w-pac/src/: can0.rs  can1.rs  dmamux.rs  ewm.rs  flexio.rs  ftm1.rs  lib.rs  pcc.rs  rcm.rs  scg.rs  smc.rs
s32k148-pac/: Cargo.toml  device.x  generate.sh  memory.x
s32k148-pac/src/: adc1.rs  cmp0.rs  enet.rs  flexio.rs  lib.rs  lpspi1.rs  pcc.rs  pdb0.rs  pdb1.rs  quad_spi.rs  sai1.rs  trgmux.rs
(+2317 files in other folders)
